--- a/package.json
+++ b/package.json
@@ -1,32 +1,65 @@
 {
-  "name": "openseadragon-imaginghelper",
-  "version": "2.0.0",
-  "description": "OpenSeadragon plugin which adds helper properties/methods for imaging applications.",
-  "license": "MIT",
-  "homepage": "https://github.com/msalsbery/OpenSeadragonImagingHelper",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/msalsbery/OpenSeadragonImagingHelper.git"
-  },
-  "bugs": "https://github.com/msalsbery/OpenSeadragonImagingHelper/issues",
-  "keywords": [
-    "openseadragon",
-    "openseadragonimaging",
-    "openseadragon plugin"
-  ],
-  "engines": {
-    "node": ">= 5.0.0",
-    "npm": ">= 6.0.0"
-  },
-  "devDependencies": {
-    "grunt": "^1.0.3",
-    "grunt-contrib-clean": "^2.0.0",
-    "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-uglify": "^4.0.0",
-    "grunt-contrib-watch": "^1.1.0",
-    "grunt-eslint": "^21.0.0",
-    "grunt-git-describe": "^2.4.4",
-    "grunt-jsdoc": "^2.3.0"
-  }
+	"name": "@openseadragon-imaging/openseadragon-imaginghelper",
+	"version": "2.1.0",
+	"publishConfig": {
+		"access": "public"
+	},
+	"description": "OpenSeadragon plugin which adds helper properties/methods for imaging applications.",
+	"license": "MIT",
+	"private": false,
+	"author": {
+		"name": "Mark Salsbery",
+		"email": "msalsbery@hotmail.com"
+	},
+	"contributors": [],
+	"main": "dist/openseadragon-imaginghelper.js",
+	"homepage": "https://github.com/openseadragon-imaging/openseadragon-imaginghelper",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/openseadragon-imaging/openseadragon-imaginghelper.git"
+	},
+	"bugs": "https://github.com/openseadragon-imaging/openseadragon-imaginghelper/issues",
+	"keywords": [
+		"openseadragon",
+		"openseadragonimaging",
+		"openseadragon plugin"
+	],
+	"engines": {
+		"node": ">= 10.0.0",
+		"npm": ">= 6.0.0"
+	},
+	"dependencies": {},
+	"devDependencies": {
+		"@babel/cli": "^7.6.4",
+		"@babel/core": "^7.6.4",
+		"@babel/preset-env": "^7.6.3",
+		"@babel/preset-react": "^7.6.3",
+		"babel-loader": "^8.0.6",
+		"babel-minify-webpack-plugin": "^0.3.1",
+		"clean-webpack-plugin": "^3.0.0",
+		"core-js": "3.3.5",
+		"css-loader": "^3.2.0",
+		"eslint": "^6.6.0",
+		"eslint-loader": "^3.0.2",
+		"fibers": "4.0.2",
+		"jsdoc": "^3.6.3",
+		"node-sass": "^4.13.0",
+		"regenerator-runtime": "0.13.3",
+		"sass": "^1.23.3",
+		"sass-loader": "^8.0.0",
+		"string-replace-loader": "^2.2.0",
+		"style-loader": "^1.0.0",
+		"webpack": "^4.41.2",
+		"webpack-cli": "^3.3.9",
+		"webpack-merge": "^4.2.2"
+	},
+	"peerDependencies": {
+		"openseadragon": "2.x"
+	},
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"dev": "webpack --config webpack.dev.js",
+		"build": "webpack --config webpack.prod.js",
+		"doc": ".\\node_modules\\.bin\\jsdoc -c doc-conf.json"
+	}
 }
