--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint": "^7.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-loader": "^4.0.2",
+    "eslint-plugin-compat": "^3.8.0",
     "eslint-plugin-prettier": "^3.1.4",
     "execa": "^4.0.2",
     "fibers": "5.0.0",
@@ -65,7 +66,7 @@
     "dev": "webpack --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
     "watch": "webpack --watch --config webpack.dev.js --info-verbosity verbose",
-    "doc": ".\\node_modules\\.bin\\jsdoc -c doc-conf.json",
+    "doc": "npm run dev && jsdoc -c doc-conf.json",
     "lint": "eslint **/*",
     "lint-fix": "eslint --fix **/*",
     "prettier": "prettier --check \"**/*\"",
